[metadata]
name = pike-smb2
description = Pure python SMB client
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
author = Brian Koropoff
author_email = Brian.Koropoff@emc.com
maintainer = Masen Furer
maintainer_email = m_github@0x26.net
license = Simplified BSD License
url = https://github.com/emc-isilon/pike
project_urls =
    Source = https://github.com/emc-isilon/pike
    Bug Reports = https://github.com/emc-isilon/pike/issues
platforms = unix, linux, osx, cygwin, win32
keywords = smb, smb-testing, smb-client
classifiers = 
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Operating System :: OS Independent
    Environment :: Console
    License :: OSI Approved :: BSD License

[options]
install_requires =
    attrs >= 19.3
    future
    pycryptodome
    six
python_requires = >=3.8
package_dir=
    =src
packages = find:

[options.packages.find]
where=src

[options.entry_points]
pytest11 = 
    pike = pike.pytest_support
